Revert "Profile patch to avoid flooding the Nightscout profile collection  (#17)"
This reverts commit 10bfff34f47ea0f1c11915c25fafbff01477edcc.

--- a/Loop/nb.lproj/Localizable.strings
+++ b/Loop/nb.lproj/Localizable.strings
@@ -111,7 +111,7 @@
 "Bolus" = "Bolus";
 
 /* The format string for bolus progress. (1: delivered volume)(2: total volume) */
-"Bolused %1$@ of %2$@" = "Ga bolus %1$@ av %2$@";
+"Bolused %1$@ of %2$@" = "Ga bolus %1$@ of %2$";
 
 /* The format string for bolus in progress showing total volume. (1: total volume) */
 "Bolusing %1$@" = "Gir bolus %1$@";
