--- a/Loop/ru.lproj/Localizable.strings
+++ b/Loop/ru.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 /* The string format appended to active insulin that describes pending insulin. (1: pending insulin) */
-" (pending: %@)" = " (В ожидании: %@)";
+" (pending: %@)" = " (ожидается: %@)";
 
 /* Format string for carb ratio average. (1: value)(2: carb unit) */
 "%1$@ %2$@/U" = "%1$@ %2$@/ед";
@@ -8,10 +8,10 @@
 "%1$@ + %2$@" = "%1$@ + %2$@";
 
 /* Low reservoir alert format string. (1: Number of units remaining) */
-"%1$@ U left" = "%1$@ Осталось ед";
+"%1$@ U left" = "Осталось %1$@ ед";
 
 /* Low reservoir alert with time remaining format string. (1: Number of units remaining)(2: approximate time remaining) */
-"%1$@ U left: %2$@" = "%1$@ Осталось ед: %2$@ ";
+"%1$@ U left: %2$@" = "Осталось %1$@ ед: %2$@";
 
 /* The format for recommended temp basal rate and time. (1: localized rate number)(2: localized time) */
 "%1$@ U/hour @ %2$@" = "%1$@ ед/час @ %2$@";
@@ -32,25 +32,25 @@
 "%@ absorbed" = "%@ усвоено";
 
 /* The subtitle format describing total insulin. (1: localized insulin total) */
-"%@ U Total" = "%@ всего ед";
+"%@ U Total" = "Всего %@ ед";
 
 /* Appends a full-stop to a statement */
 "%@." = "%@.";
 
 /* Description of the prediction input effect for glucose momentum */
-"15 min glucose regression coefficient (b₁), continued with decay over 30 min" = "15-мин коэффициент регрессии гликемии (b1), продолжен с угасанием 30 мин";
+"15 min glucose regression coefficient (b₁), continued with decay over 30 min" = "15-мин коэффициент регрессии гликемии (b₁), продолжен с угасанием 30 мин";
 
 /* Description of the prediction input effect for retrospective correction */
 "30 min comparison of glucose prediction vs actual, continued with decay over 60 min" = "30 мин сравнение предсказанной гликемии с действительной, продолжено с угасанием 60 мин";
 
 /* Subtitle of Fiasp preset */
-"A model based on the published absorption of Fiasp insulin." = "модель, основанная на опубликованных данных усвоения FIASP инсулина.";
+"A model based on the published absorption of Fiasp insulin." = "Модель, основанная на опубликованных данных об абсорбции инсулина Fiasp.";
 
 /* Subtitle of Rapid-Acting – Adult preset */
-"A model based on the published absorption of Humalog, Novolog, and Apidra insulin in adults." = "модель, основанная на опубликованных данных усвоения Humalog, Novolog и Apidra у взрослых.";
+"A model based on the published absorption of Humalog, Novolog, and Apidra insulin in adults." = "Модель, основанная на опубликованных данных усвоения Humalog, Novorapid и Apidra у взрослых.";
 
 /* Subtitle of Lyumjev preset */
-"A model based on the published absorption of Lyumjev insulin." = "Модель, основанная на опубликованной абсорбции инсулина Lyumjev.";
+"A model based on the published absorption of Lyumjev insulin." = "Модель, основанная на опубликованых данных об абсорбции инсулина Lyumjev.";
 
 /* Action to copy the recommended Bolus value to the actual Bolus Field */
 "AcceptRecommendedBolus" = "Принятьрекомендуемыйболюс";
@@ -68,22 +68,22 @@
 "Active Insulin: %@" = "Действующий инсулин: %@";
 
 /* Title of the user activity for adding carbs */
-"Add Carb Entry" = "Добавить запись углеводов";
+"Add Carb Entry" = "Ввести углеводы";
 
 /* */
-"Edit Carb Entry" = "Редактировать запись углеводов";
+"Edit Carb Entry" = "Изменить углеводы";
 
 /* Back button text for bolus screen to return to carb entry screen */
-"Carb Entry" = "Запись углеводов";
+"Carb Entry" = "Ввод углеводов";
 
 /* Title of the carb entry date picker cell */
 "Date" = "Дата";
 
 /* Title of the carb entry absorption time cell */
-"Absorption Time" = "Длительность усвоения";
+"Absorption Time" = "Время усвоения";
 
 /* Carb entry section footer text explaining absorption time */
-"Choose a longer absorption time for larger meals, or those containing fats and proteins. This is only guidance to the algorithm and need not be exact." = "Выберите более длительное время усвоения для блюд большого размера, либо блюд, содержащих жиры и белки. Это только руководство для алгоритма, высокая точность ввода данных не требуется.";
+"Choose a longer absorption time for larger meals, or those containing fats and proteins. This is only guidance to the algorithm and need not be exact." = "Выберите более длительное время усвоения для блюд большого размера, либо блюд, содержащих жиры и белки. Это лишь руководство для алгоритма, высокая точность ввода данных не требуется.";
 
 /* The button text to save a carb entry without bolusing*/
 "Save without Bolusing" = "Сохранить без болюса";
@@ -96,45 +96,45 @@
 
 /* Action sheet title selecting CGM
    Title text for button to set up a CGM */
-"Add CGM" = "добавить мониторинг";
+"Add CGM" = "Добавить мониторинг";
 
 /* The label of the meal button */
-"Add Meal" = "Добавить продукт";
+"Add Meal" = "Добавить еду";
 
 /* Action sheet title selecting Pump
    Title text for button to set up a new pump */
 "Add Pump" = "Добавить помпу";
 
 /* The title of the Amplitude service */
-"Amplitude" = "Амплитуда";
+"Amplitude" = "Amplitude";
 
 /* Subtitle of Rapid-Acting – Children preset */
-"An adjustment to the adult model based on empirical effects in children." = "Поправка к модели для взрослых основанная на эмпирических данных для детей.";
+"An adjustment to the adult model based on empirical effects in children." = "Поправка к модели для взрослых, основанная на эмпирических данных для детей.";
 
 /* The title of the amplitude API key credential */
 "API Key" = "Ключ API";
 
 /* The title of the nightscout API secret credential */
-"API Secret" = "API секрет";
+"API Secret" = "Секрет API";
 
 /* Confirmation message for deleting a CGM */
-"Are you sure you want to delete this CGM?" = "Стереть этот мониторинг?";
+"Are you sure you want to delete this CGM?" = "Удалить этот мониторинг?";
 
 /* Format fragment for a specific time */
-"at %@" = "В %@";
+"at %@" = "в %@";
 
 /* The message displayed during a device authentication prompt for bolus specification */
 "Authenticate to Bolus %@ Units" = "Подтверждение болюса %@ ед";
 
 /* (No Comment) */
-"Basal rate (U/h)" = "Базальная скорость (Ед/ч)";
+"Basal rate (U/h)" = "Базальная скорость (ед/ч)";
 
 /* Details for configuration error when basal rate schedule is missing */
-"Basal Rate Schedule" = "Скорости базала";
+"Basal Rate Schedule" = "Расписание базала";
 
 /* The title of the basal rate profile screen
    The title text for the basal rate schedule */
-"Basal Rates" = "Скорости базала";
+"Basal Rates" = "Настройки базала";
 
 /* The label of the bolus entry button
    The notification title for a bolus failure */
@@ -144,13 +144,13 @@
 "Bolused %1$@ of %2$@" = "Подан болюс%1$@ из %2$@";
 
 /* The format string for bolus in progress showing total volume. (1: total volume) */
-"Bolusing %1$@" = "Подается болюс";
+"Bolusing %1$@" = "Болюс: %1$@";
 
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Отмена";
 
 /* (No Comment) */
-"Cancel Temp Basal" = "Отменить ВБС";
+"Cancel Temp Basal" = "Отменить временный базал";
 
 /* The title of the cell indicating a bolus is being canceled */
 "Canceling Bolus" = "Отмена болюса";
@@ -166,7 +166,7 @@
 "Carbohydrates" = "Углеводы";
 
 /* Description of the prediction input effect for carbohydrates. (1: The glucose unit string) */
-"Carbs Absorbed (g) ÷ Carb Ratio (g/U) × Insulin Sensitivity (%1$@/U)" = "Усвоенные углеводы (г) : соотношение углеводов (гр/ед)х чувствительность к инсулину";
+"Carbs Absorbed (g) ÷ Carb Ratio (g/U) × Insulin Sensitivity (%1$@/U)" = "Усвоенные углеводы (г) : соотношение углеводов (гр/ед) × чувствительность к инсулину (%1$@/ед)";
 
 /* The notification alert describing a low pump battery */
 "Change the pump battery immediately" = "Замените батарею помпы немедленно";
@@ -304,10 +304,10 @@
 "Loop has not completed successfully in %@" = "Не удалось успешно  замкнуть цикл/контур в %@";
 
 /* (No Comment) */
-"Manual Temp Basal" = "Ручная ВБС";
+"Manual Temp Basal" = "Временной базал, задаваемый вручную";
 
 /* (No Comment) */
-"Max basal limit" = "Максимальная базальная скорость";
+"Max basal limit" = "Максимальное значение базала";
 
 /* The error message for missing data. (1: missing data details) */
 "Missing data: %1$@" = "Пропущены данные: %1$@";
@@ -385,7 +385,7 @@
 "Services" = "Службы";
 
 /* (No Comment) */
-"Set" = "Установить";
+"Set" = "Задать";
 
 /* The label of the settings button */
 "Settings" = "Настройки";
